--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
        padding: 0;
        box-sizing: border-box;
       }
-      
+	    label {
+	    	display:block;
+	    }
       input {
        width: 100px;
        height: 20px;
-       display: block;
+       
       }
 
       .inputs {
