--- a/index.html
+++ b/index.html
@@ -5,25 +5,26 @@
       AJAX|ZipCodeApi
     </title>
     <style>
-      html, body {
-       height: 100%;
-       margin: 0;
-       padding: 0;
-       box-sizing: border-box;
-      }
+      	    html, body {
+      	     	height: 100%;
+      	    	 margin: 0;
+      	    	 padding: 0;
+      	   	  box-sizing: border-box;
+      	    }
 	    label {
 	    	display:block;
 	    }
-      input {
-       width: 100px;
-       height: 20px;
-       
-      }
-
-      .inputs {
-        display: inline-block;
-       margin-right: 30px;
-      }
+      	    input {
+       	   	 width: 100px;
+       	   	 height: 20px;
+      	    }
+      	    .inputs {
+      	     	 display: inline-block;
+      	    	 margin-right: 30px;
+      	    }
+	    .state-width {
+	    	width: 33px;
+	    }
     </style>
   </head>
   <body>
@@ -36,12 +37,12 @@
       <div class="inputs">
         <label for="location1">Location 1</label>
         <input id="location1" type="text" placeholder="san diego">
-        <input id="location1State" type="text" placeholder="ca" maxlength="2">
+        <input id="location1State" type="text" placeholder="ca" maxlength="2" class="state-width">
       </div>
       <div class="inputs">
         <label for="location2">Location 2</label> 
         <input id="location2" type="text" placeholder="new york"> 
-        <input id="location2State" type="text" placeholder="ny" maxlength="2">
+        <input id="location2State" type="text" placeholder="ny" maxlength="2" class="state-width">
       </div>
     </div> 
     <script>
