--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       	     	 display: inline-block;
       	    	 margin-right: 30px;
       	    }
-	    .state-width {
+	    .statewidth {
 	    	width: 33px;
 	    }
     </style>
@@ -37,12 +37,12 @@
       <div class="inputs">
         <label for="location1">Location 1</label>
         <input id="location1" type="text" placeholder="san diego">
-        <input id="location1State" type="text" placeholder="ca" maxlength="2" class="state-width">
+        <input id="location1State" class="statewidth" type="text" placeholder="ca" maxlength="2">
       </div>
       <div class="inputs">
         <label for="location2">Location 2</label> 
         <input id="location2" type="text" placeholder="new york"> 
-        <input id="location2State" type="text" placeholder="ny" maxlength="2" class="state-width">
+        <input id="location2State" class="statewidth" type="text" placeholder="ny" maxlength="2">
       </div>
     </div> 
     <script>
