--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <script type="text/javascript">
       window.onload=()=>{
 	const loc1 = document.getElementById("location1");
-	let loc1Input = loc1.value;
+	const loc1Input = loc1.value;
 	
 	      
         const loc2 = document.getElementById("location2");
