--- a/index.html
+++ b/index.html
@@ -59,8 +59,10 @@
         });
   
         loc1.addEventListener("keyup",(e)=>{
-		console.log(loc1.value);
-		console.log(loc1.value.toLowerCase());
+		let locValue = loc1.value;
+		let locInputText = loc1.textContent;
+		console.log(locValue);
+		console.log(locInputText);
         });
  
       };
