--- a/index.html
+++ b/index.html
@@ -61,8 +61,16 @@
         loc1.addEventListener("keyup",(e)=>{
 		let locValue = loc1.value;
 		let locInputText = loc1.textContent;
+		console.log("________- valuevaluevaluevlaeubvaluuevaluevaluevaleuvaluevaluevaluevaluevalue");
 		console.log(locValue);
+		console.log("");
+		console.log("");
+		console.log("");
+		console.log("________- textextextextextextextextextext");
 		console.log(locInputText);
+		console.log("");
+		console.log("");
+		console.log("");
         });
  
       };
