--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
         loc1.addEventListener("keyup",(e)=>{
 		let locValue = loc1.value;
 		let locInputText = loc1.textContent;
-		console.log("valuevaluevaluevlaeubvaluuevaluevaluevaleuvaluevaluevaluevaluevalue");
+		console.log("value");
 		console.log(locValue);
-		console.log(" textextextextextextextextextext");
+		console.log("text");
 		console.log(locInputText);
         });
  
