--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         loc1.addEventListener("keyup",(e)=>{
 		let locValue = loc1.value;
 		console.log(locValue)
-		console.log(locValue.toLowerCasee());
+		console.log(locValue.toLowerCase());
 		
         });
       };
