--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   	      refNode.appendChild(newNode);
         });
   
-        loc1.addEventListener("keyup",(e)=>{
+        loc1.addEventListener("input",(e)=>{
 		let locValue = loc1.value;
 		console.log(locValue)
 		console.log(locValue.toLowerCase());
