--- a/index.html
+++ b/index.html
@@ -60,7 +60,12 @@
 				    console.log(loc1Value),
 				    console.log(loc2Value));
 		    };
-		    loc1.addEventListener("keyup",adjustAndRender(loc1,loc2));
+		    loc1.addEventListener("keyup",(e)=>{
+			    let loc1Value = loc1.value;
+			    let loc2Value = loc2.value;
+		            console.log(loc1Value),
+			    console.log(loc2Value));			    
+		    });
 	    };
     </script>  
   </body>
