--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 		    loc1.addEventListener("keyup",(e)=>{
 			    let loc1Value = loc1.value;
 			    let loc2Value = loc2.value;
-		            console.log(loc1Value),
-			    console.log(loc2Value));			    
+		            console.log(loc1Value);
+			    console.log(loc2Value);			    
 		    });
 	    };
     </script>  
