--- a/index.html
+++ b/index.html
@@ -50,22 +50,28 @@
 	    window.onload=()=>{
 		    const loc1 = document.getElementById("location1");
 		    const loc2 = document.getElementById("location2");
+		    const loc1State = documnet.getElementById("location1State");
+		    const loc2State = documnet.getElementById("location2State");
 		    let insertNode = ((refNode,newNode)=>{
 			    refNode.appendChild(newNode);
 		    });
-		    let adjustAndRender = (location1,location2)=>{
-			    let loc1Value = location1.value;
-			    let loc2Value = location2.value;
-			    return (
-				    console.log(loc1Value),
-				    console.log(loc2Value));
+		    let adjustInputs = (l1,l1State,l2,l2State)=>{
+			    let loc1Value = l1.value;
+			    let loc2Value = l2.value;
+			    let loc1State = l1State.value;
+			    let loc2State = l2State.value;
+		            console.log(loc1Value);
+			    console.log(loc2Value);
 		    };
 		    loc1.addEventListener("keyup",(e)=>{
+			    /*
 			    let loc1Value = loc1.value;
 			    let loc2Value = loc2.value;
 			    if(loc1Value === "" || loc2Value ===""){
 				    console.log("they are empty");
 			    }
+			    */
+			    adjustInputs(loc1,loc2State,loc2,loc2State);
 		    });
 	    };
     </script>  
