--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 	    window.onload=()=>{
 		    const loc1 = document.getElementById("location1");
 		    const loc2 = document.getElementById("location2");
-		    const loc1State = documnet.getElementById("location1State");
-		    const loc2State = documnet.getElementById("location2State");
+		    const loc1State = document.getElementById("location1State");
+		    const loc2State = document.getElementById("location2State");
 		    let insertNode = ((refNode,newNode)=>{
 			    refNode.appendChild(newNode);
 		    });
