--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 			    let L2Value = loc2.value;
 			    let L2StateValue = loc2State.value;
 			    L1Value.toLowerCase();
-			    L1StateValue.tolowerCase();
+			    L1StateValue.toLowerCase();
 			    L2Value.toLowerCase();
 			    L2StateValue.toLowerCase();
 			    
