--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 			    L2Value.toLowerCase();
 			    L2StateValue.toLowerCase();
 			    
-			    if(loc1Value === "" || loc2Value ===""){
+			    if(L1Value === "" || L2Value ===""){
 				    console.log("they are empty");
 			    }
 			    
