--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
     				xhr.send()
 			    }
 			    createRequest(firstURL, function(firstResponse) {
-				let first,second;
-			    	first = JSON.parse(firstResponse);
+				
+			    	let first = JSON.parse(firstResponse);
     				zipcode1 = first.zip_codes[0];
 				//console.log(first.zip_codes[0]);
    				createRequest(secondURL, function(secondResponse) {
-					second = JSON.parse(secondResponse);
+					let second = JSON.parse(secondResponse);
 					zipcode2 = second.zip_code[0];
 					//console.log(second.zip_codes[0]);
     				});
