--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 				//console.log(first.zip_codes[0]);
    				createRequest(secondURL, function(secondResponse) {
 					let second = JSON.parse(secondResponse);
-					zipcode2 = second.zip_code[0];
+					zipcode2 = second.zip_codes[0];
 					//console.log(second.zip_codes[0]);
     				});
 			    });
