--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
    				createRequest(secondURL, function(secondResponse) {
 					let second = JSON.parse(secondResponse);
 					zipcode2 = second.zip_codes[0];
-					console.log(second.zip_codes[0]);
+					console.log(zipcode1 + ":"+zipcode2);
     				});
 			    });
 			    
