--- a/index.html
+++ b/index.html
@@ -97,6 +97,17 @@
 					let second = JSON.parse(secondResponse);
 					zipcode2 = second.zip_codes[0];
 					console.log(zipcode1 + ":"+zipcode2);
+					let distURL = "https://www.zipcodeapi.com/rest/js-ObvnGRv3w8HfHqoTQieXlpS2nWOHAeTs9mzanc0BPSTvMHffuTpTcexJ8KVzL7zS/distance.json/"+zipcode1+"/"+zipcode2+"/mile";
+					createRequest(distURL,function(lastResponse){
+						let last = JSON.parse(lastResponse);
+						let distance = last.distance;
+						console.log("AS IS distance");
+						console.log(distance);
+						console.log("AS IS last.distance[0]");
+						console.log(last.distance[0]);
+						console.log("AS IS JSON.stringify(distance)");
+						conosle.log(JSON.stringify(distance));
+					});
     				});
 			    });
 			    
