--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 						console.log("AS IS last.distance[0]");
 						console.log(last.distance[0]);
 						console.log("AS IS JSON.stringify(distance)");
-						conosle.log(JSON.stringify(distance));
+						console.log(JSON.stringify(distance));
 					});
     				});
 			    });
