--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </div> 
     <script type="text/javascript">
 	    window.onload=()=>{
-		    const form = documnet.getElementById("form1");
+		    const form = document.getElementById("form1");
 		    const loc1 = document.getElementById("location1");
 		    const loc2 = document.getElementById("location2");
 		    const loc1State = document.getElementById("location1State");
