--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
       	   	box-sizing: border-box;
 		text-align: center;
 		font-family: Verdana,Helvetica,sans-serif;
-		font-size: 16px;
+		font-size: 15px;
       	    }
 	    h4 {
 	    	line-height: 1.5rem;
-		font-weight: 500;
+		font-weight: 700;
+		font-size: .8rem;
 	    }
 	    label {
 	    	display:block;
@@ -27,6 +28,7 @@
        	   	 height: 7rem;
       	    }
       	    .inputs {
+		 width: 15rem;    
       	     	 display: block;
       	    	 margin: 1rem auto;
 		 text-align: left;
@@ -36,7 +38,7 @@
 	    }
 	    .requestButton {
 	    	width:14rem;
-		hieght:9rem;
+		height:9rem;
 		background-color: #292929;
 		margin: 1.4rem;    
 		color:#fff;
