--- a/index.html
+++ b/index.html
@@ -19,13 +19,18 @@
 	    	line-height: 1.5rem;
 		font-weight: 700;
 		font-size: .8rem;
+		max-width: 50rem;
+		margin: 1.4rem auto 3rem auto;
+	    }
+	    p, label {
+	    	font-weight:900;
 	    }
 	    label {
 	    	display:block;
 	    }
       	    input {
        	   	 width: 10rem;
-       	   	 height: 7rem;
+       	   	 height: 2rem;
       	    }
       	    .inputs {
 		 width: 15rem;    
@@ -38,9 +43,9 @@
 	    }
 	    .requestButton {
 	    	width:14rem;
-		height:9rem;
+		height:2.5rem;
 		background-color: #292929;
-		margin: 1.4rem;    
+		margin: 1.4rem auto;    
 		color:#fff;
 	    }
 	    .requestButton:hover{
