--- a/index.html
+++ b/index.html
@@ -47,9 +47,12 @@
 		background-color: #292929;
 		margin: 1.4rem auto;    
 		color:#fff;
+		font-weight:900;
+		font-size: 1rem;
 	    }
 	    .requestButton:hover{
-	    	background-color: #000;   
+	    	background-color: #000; 
+		font-size: 1.2rem;       
 	    }
     </style>
   </head>
