--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       	    input {
        	   	 width: 10rem;
        	   	 height: 2rem;
+		 border: 2px solid #000;   
       	    }
       	    .inputs {
 		 width: 15rem;    
