--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 	    .requestButton {
 	    	width:14rem;
 		height:2.5rem;
-		background-color: #292929;
+		background-color: #555;
 		margin: 1.4rem auto;    
 		color:#fff;
 		font-weight:900;
@@ -53,7 +53,9 @@
 	    }
 	    .requestButton:hover{
 	    	background-color: #000; 
-		font-size: 1.2rem;       
+		font-size: 1.1rem;
+		width: 14.2rem;
+		height: 2.7;   
 	    }
     </style>
   </head>
