--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
 		color:#fff;
 		font-weight:900;
 		font-size: 1rem;
+		border: none;
+		cursor: pointer;
 	    }
 	    .requestButton:hover{
 	    	background-color: #000;   
