--- a/index.html
+++ b/index.html
@@ -33,11 +33,17 @@
        	   	 height: 2rem;
 		 border: 2px solid #000;   
       	    }
+	    input::placeholder {
+  		color: #aaa;
+  		font-size: .8rem;
+  		font-style: italic;
+	    }
       	    .inputs {
 		 width: 15rem;    
       	     	 display: block;
       	    	 margin: 1rem auto;
 		 text-align: left;
+		 font-size: .9rem;
       	    }
 	    .statewidth {
 	    	width: 3rem;
