--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 		    for(let i=0;i<values;i++){
 		    	if(inputs[i].value===""){
 				alert("Please input a value to the field.");
-				inputs[i].style.boxShadow = -1px 1px 3px -1px #4d4dff;
+				inputs[i].style.boxShadow = "-1px 1px 3px -1px #4d4dff";
 				break;
 	            	}
 		    }
