--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 		    insertNode(form,div);
 		    
 		    let inputs = [loc1,loc2,loc1State,loc2State];
-		    for(let i=0;i<values;i++){
+		    for(let i=0;i<inputs.length;i++){
 		    	if(inputs[i].value===""){
 				alert("Please input a value to the field.");
 				inputs[i].style.boxShadow = "-1px 1px 3px -1px #4d4dff";
