--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
 		border: none;
 		cursor: pointer;
 	    }
+	    .requestButton:focus{
+		    outline:none;
+	    }
 	    .requestButton:hover{
 	    	background-color: #000;   
 	    }
