--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 			    
 		    	    for(let i=0;i<inputs.length;i++){
 				    if(inputs[i].value===""){
-					    alert("Please input a value intto the field.");
+					    alert("Please input a value into the field.");
 					    inputs[i].style.boxShadow = "0px 0px 12px -1px #FF8C00";
 					    inputs[i].style.border="2px solid #FF8C00";
 					    return false;
